Preserve nullable NOT_LISTED fields in KEV read output